--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 <!--SECTION 1-->
     <section>
         <h2 class="Accueil">Accueil </h2> 
-        <p>Hello, moi c’est Lily !
-        Bienvenue sur mon site ou la mode et l’émotion se rencontrent.
-        Ici, la mode donne sa voix au luxe d‘être soi. 
-        Je vais commencer par explorer ce luxe à travers des métaphores, des images et des idées, pour montrer que le vrai luxe, se trouve dans l’expression authentique de soi.
-        Ce site n’est pas un portfolio classique. C’est un espace, conçu sur Visual Studio Code, où je vous partage ma vision du luxe . Pour moi, le luxe ne réside pas seulement dans le prix ou l’exclusivité, mais dans la qualité de l’expérience, dans la subtilité des détails, dans la capacité de chaque pièce à révéler une personnalité. À travers ce site, j’explore cette idée,  avec élégance et émotion : le luxe, c’est la liberté d’être soi.                                                        
+        <p>Hello ! Moi, c’est Lily ! 
+Bienvenue sur mon site où la mode et l’émotion se rencontrent ! 
+Ici, la mode donne sa voix au luxe d’être soi ! 
+Je vous propose d’explorer ce luxe à travers des métaphores, des images et des réflexions qui prouvent  que le véritable luxe réside dans l’expression authentique de soi. 
+Ce site n’est donc pas un portfolio classique : c’est un espace, conçu sur Visual Studio Code, où je vous invite à partager ma vision du luxe. Pour moi, le luxe ne se résume pas à un prix ou une exclusivité, il réside dans la qualité d’une expérience, dans la subtilité d’un détail, dans la capacité d’une pièce à révéler une personnalité. 
+À travers ce site, j’explore ainsi cette idée, avec élégance et émotion. 
+Le luxe, c’est bien la liberté d’être soi !                                                        
      </p>
 
 
