--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 <!--SECTION 1-->
     <section>
         <h2 class="Accueil">Accueil </h2> 
-        <p> 
-    Bienvenue sur mon site où la mode et l’émotion se rencontrent ! 
+        <p> Bienvenue sur mon site où la mode et l’émotion se rencontrent ! 
     Ici, la mode donne sa voix au luxe d’être soi ! 
     Je vous propose d’explorer ce luxe à travers des métaphores, des images et des réflexions qui prouvent  que le véritable luxe réside dans l’expression authentique de soi. 
     Ce site n’est donc pas un portfolio classique : c’est un espace, conçu sur Visual Studio Code, où je vous invite à partager ma vision du luxe. Pour moi, le luxe ne se résume pas à un prix ou une exclusivité, il réside dans la qualité d’une expérience, dans la subtilité d’un détail, dans la capacité d’une pièce à révéler une personnalité. 
