--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     
 
-<!--SECTION 1-->
-    <section>
-        <h2 class="Accueil">Accueil </h2> 
+        <section class="section-accueil"> 
+    <h2 class="Accueil">Accueil</h2> 
+    <p>
         <p> Bienvenue sur mon site où la mode et l’émotion se rencontrent ! 
     Ici, la mode donne sa voix au luxe d’être soi ! 
     Je vous propose d’explorer ce luxe à travers des métaphores, des images et des réflexions qui prouvent  que le véritable luxe réside dans l’expression authentique de soi. 
@@ -28,6 +28,7 @@
     À travers ce site, j’explore ainsi cette idée, avec élégance et émotion. 
     Le luxe, c’est bien la liberté d’être soi !                                                        
      </p>
+            </section>
 
 
      <section id="banniere">
