--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     
 
-        <section class="section-accueil"> 
-    <h2 class="Accueil">Accueil</h2> 
-    <p>
+    !--SECTION 1-->
+    <section> 
+        <h2 class="Accueil">Accueil </h2> 
         <p> Bienvenue sur mon site où la mode et l’émotion se rencontrent ! 
     Ici, la mode donne sa voix au luxe d’être soi ! 
     Je vous propose d’explorer ce luxe à travers des métaphores, des images et des réflexions qui prouvent  que le véritable luxe réside dans l’expression authentique de soi. 
