--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </nav>
 
     
-
     <section> 
         <h2 class="Accueil">Accueil </h2> 
         <p> Bienvenue sur mon site où la mode et l’émotion se rencontrent ! 
@@ -31,7 +30,7 @@
 
 
      <section id="banniere">
-        <img src="assets/presentation.png" alt="Image section" class="img-presentation">
+        <img src="assets/banniere2.0.png" alt="Image section" class="img-banniere2.0">
      </section>
 
       <section id="une">
