--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 
      <section id="banniere">
-        <img src="assets/presentation.png" alt="Image section" class="img-presentation">
+        <img src="assets/banniere2.png" alt="Image section" class="img-banniere2">
      </section>
 
       <section id="une">
